Update AstBuilderGenerator.java