@@ -7,8 +7,7 @@ import java.util.regex.*;
 
 /**
  * Generates AstBuilder.java by scanning AST classes in src/danex/ast/.
- * Assumes each AST class has a single constructor initializing final fields.
- * AST class names end with Expr or Stmt.
+ * Emits imports for danex.antlr.DanexParser and DanexParserVisitor.
  */
 public class AstBuilderGenerator {
     private static final Path AST_DIR = Paths.get("src/danex/ast");
@@ -16,13 +15,12 @@ public class AstBuilderGenerator {
 
     public static void main(String[] args) {
         try {
-            List<AstClass> astClasses = new ArrayList<>();
-
             if (!Files.exists(AST_DIR) || !Files.isDirectory(AST_DIR)) {
                 System.err.println("AST directory not found: " + AST_DIR.toAbsolutePath());
                 return;
             }
 
+            List<AstClass> astClasses = new ArrayList<>();
             try (DirectoryStream<Path> stream = Files.newDirectoryStream(AST_DIR, "*.java")) {
                 for (Path path : stream) {
                     AstClass cls = parseAstClass(path);
@@ -33,6 +31,8 @@ public class AstBuilderGenerator {
             StringBuilder sb = new StringBuilder();
             sb.append("package danex;\n\n");
             sb.append("import danex.ast.*;\n");
+            sb.append("import danex.antlr.DanexParser;\n");
+            sb.append("import danex.antlr.DanexParserVisitor;\n");
             sb.append("import java.util.*;\n\n");
             sb.append("public class AstBuilder implements DanexParserVisitor<Object> {\n\n");
 
@@ -52,56 +52,59 @@ public class AstBuilderGenerator {
     }
 
     private static AstClass parseAstClass(Path path) throws IOException {
-        String content = new String(Files.readAllBytes(path));
+        String content = Files.readString(path);
         String fileName = path.getFileName().toString();
         String className = fileName.substring(0, fileName.length() - 5);
 
-        if (!className.endsWith("Expr") && !className.endsWith("Stmt")) {
-            return null; // skip non-AST classes
-        }
+        // Only classes ending with Expr or Stmt
         boolean isExpr = className.endsWith("Expr");
-        String ruleName = className.substring(0, className.length() - (isExpr ? 4 : 4));
+        boolean isStmt = className.endsWith("Stmt");
+        if (!isExpr && !isStmt) {
+            return null;
+        }
+        String ruleName = className; // e.g. "BinaryExpr", used directly in visit method
 
         // Find constructor signature: public ClassName(Type param, ...)
-        Pattern ctorPattern = Pattern.compile("public\\s+" + className + "\\s*\\(([^)]*)\\)");
+        Pattern ctorPattern = Pattern.compile("public\\s+" + className + "\\s*\([^)]*)\");
         Matcher matcher = ctorPattern.matcher(content);
-        if (!matcher.find()) {
-            System.err.println("Warning: No constructor found in " + className);
-            return new AstClass(className, ruleName, isExpr, Collections.emptyList());
-        }
-        String params = matcher.group(1).trim();
         List<Field> fields = new ArrayList<>();
-        if (!params.isEmpty()) {
-            String[] parts = params.split(",");
-            for (String part : parts) {
-                part = part.trim();
-                String[] toks = part.split("\\s+");
-                if (toks.length >= 2) {
-                    String type = toks[0];
-                    String name = toks[1];
-                    fields.add(new Field(type, name));
-                } else {
-                    System.err.println("Warning: cannot parse constructor param '" + part + "' in " + className);
+        if (matcher.find()) {
+            String params = matcher.group(1).trim();
+            if (!params.isEmpty()) {
+                String[] parts = params.split(",");
+                for (String part : parts) {
+                    part = part.trim();
+                    String[] toks = part.split("\\s+");
+                    if (toks.length >= 2) {
+                        String type = toks[0];
+                        String name = toks[1];
+                        fields.add(new Field(type, name));
+                    } else {
+                        System.err.println("Warning: cannot parse constructor param '" + part + "' in " + className);
+                    }
                 }
             }
+        } else {
+            System.err.println("Warning: No constructor found in " + className);
         }
-        return new AstClass(className, ruleName, isExpr, fields);
+        return new AstClass(className, ruleName, fields);
     }
 
     private static String generateVisitorMethod(AstClass cls) {
         StringBuilder sb = new StringBuilder();
-        String methodName = capitalize(cls.ruleName) + (cls.isExpr ? "Expr" : "Stmt");
+        String className = cls.className;           // e.g. "BinaryExpr"
+        String methodName = className;               // same name in visitor: visitBinaryExpr
         sb.append("    @Override\n");
-        sb.append("    public Object visit").append(methodName).append("(DanexParser.")
-          .append(methodName).append("Context ctx) {\n");
+        sb.append("    public Object visit").append(methodName)
+          .append("(DanexParser.").append(methodName).append("Context ctx) {\n");
 
         List<String> argNames = new ArrayList<>();
         for (Field f : cls.fields) {
             sb.append("        ").append(generateFieldLine(f)).append("\n");
             argNames.add(f.name);
         }
-        sb.append("        return new ").append(cls.className).append("(")
-          .append(String.join(", ", argNames)).append(");\n");
+        sb.append("        return new ").append(className)
+          .append("(").append(String.join(", ", argNames)).append(");\n");
         sb.append("    }\n");
         return sb.toString();
     }
@@ -132,11 +135,6 @@ public class AstBuilderGenerator {
         }
     }
 
-    private static String capitalize(String s) {
-        if (s == null || s.isEmpty()) return s;
-        return s.substring(0, 1).toUpperCase() + s.substring(1);
-    }
-
     private static class Field {
         final String type;
         final String name;
@@ -148,14 +146,10 @@ public class AstBuilderGenerator {
 
     private static class AstClass {
         final String className;
-        final String ruleName;
-        final boolean isExpr;
         final List<Field> fields;
-        AstClass(String className, String ruleName, boolean isExpr, List<Field> fields) {
+        AstClass(String className, String ruleName, List<Field> fields) {
             this.className = className;
-            this.ruleName = ruleName;
-            this.isExpr = isExpr;
             this.fields = fields;
         }
     }
-}
+            }
